# django-task1

./: db.sqlite3  mypy.ini  pyproject.toml
student/: db.json  models.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_alter_student_class_room.py
task1_project/: settings.py  urls.py
