[tool.poetry]
name = "task1"
version = "0.1.0"
description = ""
authors = ["Ahmed Salah <ahmed_abdelsamie@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
django-stubs = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
